# complexity-bot

./: .env.example  .gitignore  BUILD_RELEASE.md  CLAUDE.md  package.json  pnpm-lock.yaml
engine/: build_engine.spec  engine.py  pyproject.toml  requirements-dev.txt  requirements.txt  watchdog.py
engine/config/: settings.py  symbols.py
engine/data/: audit_log.py  duckdb_store.py  event_log.py  ingest_dukascopy.py  ingest_histdata.py  integrity.py  schemas.sql  spread_monitor.py  sqlite_journal.py  volume_bars.py
engine/execution/: execution_quality.py  order_router.py  position_manager.py  position_monitor.py  shadow_trader.py  vwap_slicer.py
engine/features/: correlation.py  feature_pipeline.py  garch.py  indicators.py  order_flow.py  regime.py  smc.py  smc_filters.py  supplementary.py  vpin.py
engine/ipc/: broadcaster.py  messages.py  ws_server.py
engine/learning/: ab_test.py  anomaly_gate.py  calibration.py  champion_challenger.py  claude_meta_policy.py  cloud_trainer.py  drift_detector.py  excursion_tracker.py  feature_snapshot.py  hour_symbol_heatmap.py  overfit_metrics.py  performance_tracker.py  purged_cv.py  retrain_dispatcher.py  risk_of_ruin.py  shap_attribution.py  stats.py  triple_barrier.py  walk_forward.py
engine/models/: _check_symbols.py  cnn_lstm.py  dataset.py  ewc.py  export_for_colab.py  generate_colab_notebook.py  inference.py  lightgbm_model.py  meta_labeler.py  meta_router.py  online_lgbm_trainer.py  replay_buffer.py  rl_agent.py  rl_env.py  train_batch.py  train_online.py
engine/mt5_link/: account.py  connection.py  data_stream.py
(+175 files in other folders)
